<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">
    
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/primario"
      android:alpha="0.7"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="28dp"
      android:gravity="center">

   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/house_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SALONCOMUNAL"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textSize="32sp"
        android:textColor="@color/white"/>

  </LinearLayout>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      app:cardCornerRadius="28dp"
      android:layout_marginBottom="-20dp"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Bienvenido"
          android:textColor="@color/primario"
          android:textSize="32sp"
          android:textStyle="bold" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Favor_login"
          android:alpha="0.7"/>

      <View
          android:layout_width="wrap_content"
          android:layout_height="30dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:alpha="0.7"
          android:text="@string/Email"
          android:textStyle="bold"/>

      <EditText
          android:id="@+id/txtLEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableEnd="@drawable/done_icon"
          android:inputType="textEmailAddress" />

      <View
          android:layout_width="wrap_content"
          android:layout_height="20dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:alpha="0.7"
          android:text="@string/Clave"
          android:textStyle="bold"/>

      <EditText
          android:id="@+id/txtLClave"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableEnd="@drawable/password_icon"
          android:inputType="textPassword" />

      <View
          android:layout_width="wrap_content"
          android:layout_height="20dp"/>

      <Button
          android:id="@+id/btnLogin"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="LoginUsuarioSqlServer"
          android:text="@string/Login" />
      <View
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <Button
          android:id="@+id/btnGoRegistrar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Registrarse"/>
      <View
          android:layout_width="wrap_content"
          android:layout_height="20dp"/>

    </LinearLayout>

  </androidx.cardview.widget.CardView>

  </RelativeLayout>